output/VERSION_X86/Build_x86.log
"Target_x86" 
15.06.2019 21:29:51,62 
"preprocess it" 
"create assembly listings" 
"compile it" 
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c: In function 'IntSub':
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:59:14: warning: variable 'tmpDiff' set but not used [-Wunused-but-set-variable]
       uint16 tmpDiff;
              ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:52:21: warning: unused parameter 'Differenz' [-Wunused-parameter]
 void IntSub(BigInt* Differenz, BigInt* Minuend, BigInt* Subtrahend)
                     ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c: In function 'IntMul':
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:86:10: error: 'tmpProdukt' undeclared (first use in this function)
          tmpProdukt = (uint16)Faktor1->Number[i1] * (uint16)Faktor2->Number[i2];      
          ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:86:10: note: each undeclared identifier is reported only once for each function it appears in
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:87:10: error: 'tmpShift' undeclared (first use in this function)
          tmpShift = i1+i2;
          ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:90:19: error: invalid type argument of '->' (have 'BigInt')
          tmpBigInt->Number[BigIntSize-1] = tmpProdukt & 0xFFu;
                   ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:91:19: error: invalid type argument of '->' (have 'BigInt')
          tmpBigInt->Number[BigIntSize-2] = (tmpProdukt & 0x100u)>>8;
                   ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:93:10: error: incompatible type for argument 3 of 'IntAdd'
          IntAdd(Produkt, Produkt, tmpBigInt);         
          ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:40:6: note: expected 'struct BigInt *' but argument is of type 'BigInt'
 void IntAdd(BigInt* Summe, BigInt* ErsterSummand, BigInt* ZweiterSummand)
      ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c: In function 'IntDiv':
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:110:10: error: 'tmpQuotient' undeclared (first use in this function)
          tmpQuotient = (uint16)Dividend->Number[i1] / (uint16)Divisor->Number[i2];      
          ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:111:10: error: 'tmpShift' undeclared (first use in this function)
          tmpShift = i1+i2;
          ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:114:19: error: invalid type argument of '->' (have 'BigInt')
          tmpBigInt->Number[BigIntSize-1] = tmpQuotient & 0xFFu;
                   ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:115:19: error: invalid type argument of '->' (have 'BigInt')
          tmpBigInt->Number[BigIntSize-2] = (tmpQuotient & 0x100u)>>8;
                   ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:117:10: error: incompatible type for argument 3 of 'IntAdd'
          IntAdd(Quotient, Quotient, tmpBigInt);       
          ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:40:6: note: expected 'struct BigInt *' but argument is of type 'BigInt'
 void IntAdd(BigInt* Summe, BigInt* ErsterSummand, BigInt* ZweiterSummand)
      ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c: In function 'IsLess':
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:143:4: warning: return makes integer from pointer without a cast
    return IsEqual;   
    ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:125:14: warning: variable 'IsLess' set but not used [-Wunused-but-set-variable]
    boolean_t IsLess = False;/* in case no if was entered, the numbers are equal -> return False */
              ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c: In function 'IsGreater':
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:188:4: warning: return makes integer from pointer without a cast
    return IsEqual;
    ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:170:14: warning: variable 'IsLess' set but not used [-Wunused-but-set-variable]
    boolean_t IsLess = False;/* in case no if was entered, the numbers are equal -> return False */
              ^
"assemble it" 
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c: In function 'IntSub':
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:59:14: warning: variable 'tmpDiff' set but not used [-Wunused-but-set-variable]
       uint16 tmpDiff;
              ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:52:21: warning: unused parameter 'Differenz' [-Wunused-parameter]
 void IntSub(BigInt* Differenz, BigInt* Minuend, BigInt* Subtrahend)
                     ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c: In function 'IntMul':
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:86:10: error: 'tmpProdukt' undeclared (first use in this function)
          tmpProdukt = (uint16)Faktor1->Number[i1] * (uint16)Faktor2->Number[i2];      
          ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:86:10: note: each undeclared identifier is reported only once for each function it appears in
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:87:10: error: 'tmpShift' undeclared (first use in this function)
          tmpShift = i1+i2;
          ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:90:19: error: invalid type argument of '->' (have 'BigInt')
          tmpBigInt->Number[BigIntSize-1] = tmpProdukt & 0xFFu;
                   ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:91:19: error: invalid type argument of '->' (have 'BigInt')
          tmpBigInt->Number[BigIntSize-2] = (tmpProdukt & 0x100u)>>8;
                   ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:93:10: error: incompatible type for argument 3 of 'IntAdd'
          IntAdd(Produkt, Produkt, tmpBigInt);         
          ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:40:6: note: expected 'struct BigInt *' but argument is of type 'BigInt'
 void IntAdd(BigInt* Summe, BigInt* ErsterSummand, BigInt* ZweiterSummand)
      ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c: In function 'IntDiv':
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:110:10: error: 'tmpQuotient' undeclared (first use in this function)
          tmpQuotient = (uint16)Dividend->Number[i1] / (uint16)Divisor->Number[i2];      
          ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:111:10: error: 'tmpShift' undeclared (first use in this function)
          tmpShift = i1+i2;
          ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:114:19: error: invalid type argument of '->' (have 'BigInt')
          tmpBigInt->Number[BigIntSize-1] = tmpQuotient & 0xFFu;
                   ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:115:19: error: invalid type argument of '->' (have 'BigInt')
          tmpBigInt->Number[BigIntSize-2] = (tmpQuotient & 0x100u)>>8;
                   ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:117:10: error: incompatible type for argument 3 of 'IntAdd'
          IntAdd(Quotient, Quotient, tmpBigInt);       
          ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:40:6: note: expected 'struct BigInt *' but argument is of type 'BigInt'
 void IntAdd(BigInt* Summe, BigInt* ErsterSummand, BigInt* ZweiterSummand)
      ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c: In function 'IsLess':
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:143:4: warning: return makes integer from pointer without a cast
    return IsEqual;   
    ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:125:14: warning: variable 'IsLess' set but not used [-Wunused-but-set-variable]
    boolean_t IsLess = False;/* in case no if was entered, the numbers are equal -> return False */
              ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c: In function 'IsGreater':
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:188:4: warning: return makes integer from pointer without a cast
    return IsEqual;
    ^
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_common.c:170:14: warning: variable 'IsLess' set but not used [-Wunused-but-set-variable]
    boolean_t IsLess = False;/* in case no if was entered, the numbers are equal -> return False */
              ^
"link it" 
mingw32-g++.exe: error: E:\NeuOrga\Programmieren\c_cpp\github_os\output\os_base\obj_x86\os_common.o: No such file or directory
